--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Deepesh Nair" width="80">
         </figure>
 
         <div class="info-content">
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>CDMX, CDMX, Mexico</address>
+              <address>Mexico City, MX</address>
             </div>
 
           </li>
@@ -209,17 +209,16 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            Hi, I'm a Data Engineer based in CDMX,Mexico and originally from Mumbai,India , working in data engineering.
+            I enjoy turning complex problems into simple, concise and storytelling narratives.
           </p>
 
           <p>
             My job is to build your website so that it is functional and user-friendly but at the same time attractive.
             Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            add personal touch to your product and make sure that is eye-catching and easy to use. 
+            
+            Passionate about using data to generate business value, growing high-performing teams, and partnering with cross-functional stakeholders through complex change.
           </p>
         </section>
 
@@ -242,7 +241,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Architecture Design</h4>
 
                 <p class="service-item-text">
                   The most modern and high-quality design made at a professional level.
@@ -258,7 +257,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Hands on Technical</h4>
 
                 <p class="service-item-text">
                   High-quality development of sites at the professional level.
@@ -274,7 +273,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Data Products</h4>
 
                 <p class="service-item-text">
                   Professional development of applications for iOS and Android.
@@ -290,7 +289,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Generative AI</h4>
 
                 <p class="service-item-text">
                   I make high-quality photos of any category at a professional level.
