--- a/index.html
+++ b/index.html
@@ -531,9 +531,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">MITx - Statistics and Data Science</h4>
 
-              <span>2007 — 2008</span>
+              <span>2022 — Present</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -545,9 +545,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Computer Engineering, University of Mumbai</h4>
 
-              <span>2006 — 2007</span>
+              <span>2006 — 2010</span>
 
               <p class="timeline-text">
                 Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
@@ -558,7 +558,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">High school </h4>
 
               <span>2002 — 2004</span>
 
@@ -588,9 +588,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Head of Data, Yape</h4>
 
-              <span>2015 — Present</span>
+              <span>2022 — Present</span>
 
               <p class="timeline-text">
                 Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
@@ -602,23 +602,38 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Data Engineering Manager, Clip</h4>
 
-              <span>2013 — 2015</span>
+              <span>2021 — 2022</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Clip is the leading digital payments and commerce enablement platform in Mexico.
+                Following a $250mn investment in June’21 , Clip became the most valuable Fintech brand and incepted the Unicorn trend in Mexico.
+                At the core of Data & Analytics division, we have built a unique, robust, constantly-evolving modern data stack supported with
+                in-house developments and powered by a diverse group of data-driven engineers
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Head of Data Engineering, Sweatworks</h4>
 
-              <span>2010 — 2013</span>
+              <span>2020 — 2021</span>
+
+              <p class="timeline-text">
+                Sweatworks is a wellness-tech disrupting company that combines the power of custom digital software with hardware products. 
+                With Data & Analytics becoming crucial part of Health & Fitness industry, we created the first data team vertical to add value 
+                to our products, generate new business goals and achieve actionable results for our clients.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Head of Decision Science, Minu</h4>
+
+              <span>2019 — 2020</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
