Edit aboutMe, update logo to underconstruction

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/underconstruction.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -221,16 +221,13 @@
 
         <section class="about-text">
           <p>
-            Hi, I'm a Data Engineer based in CDMX,Mexico and originally from Mumbai,India , working in data engineering.
+            Hi, I'm a Data Engineer based in CDMX,Mexico & originally from Mumbai,India. 
             I enjoy turning complex problems into simple, concise and storytelling narratives.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. 
-            
-            Passionate about using data to generate business value, growing high-performing teams, and partnering with cross-functional stakeholders through complex change.
+            My job is to build your data platform so that it is scalable, resilient, and operational but at the same not time consuming or prone to vendor lock-ins.
+            Moreover, I add a personal touch to your data engineering & architecture paradigms and make sure that it is easily accessible for everyone to use.
           </p>
         </section>
 
