Update experience section

--- a/index.html
+++ b/index.html
@@ -602,9 +602,11 @@
               <span>2022 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Yape is a digital wallet, incepted within BCP, the largest bank in Peru. It started in 2017 as a P2P payment alternative to the bank. 
+                Today, over one-third of the entire population attribute towards 200M monthly transactions, largely surpassing the bank in both metrics.
+                With 18+ products that attribute towards our super-app status, complemented with the demand for org-wide data-driven decisions , We are leading a taskforce 
+                working on a disruptive initiative that eradicates the use of on-premise ungoverned sources (v1,2017) & overcomes the limitations of our 
+                existing monolithic data-platform (v2, 2020) by operating on a fully event-driven architecture around a robust data stack (v3, 2023).
               </p>
 
             </li>
@@ -619,7 +621,7 @@
                 Clip is the leading digital payments and commerce enablement platform in Mexico.
                 Following a $250mn investment in June’21 , Clip became the most valuable Fintech brand and incepted the Unicorn trend in Mexico.
                 At the core of Data & Analytics division, we have built a unique, robust, constantly-evolving modern data stack supported with
-                in-house developments and powered by a diverse group of data-driven engineers
+                in-house developments and powered by a diverse group of data-driven engineers.
               </p>
 
             </li>
@@ -645,9 +647,11 @@
               <span>2019 — 2020</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Minu is an employee financial wellness company. It solves employees lack of liquidity between paychecks in Mexico & reduces the level of 
+                indebtedness by offering them instant, 24/7 access to their earned wages without having to wait for payday.
+                As the first data member to the tech squad, I explored diverse roles from collecting data points to creating business models,
+                ideating market research and delivering strategic OKRs for investors.
+                
               </p>
 
             </li>
